# porepy-iterative-solvers

./: .gitignore  Dockerfile  README.md  mypy.ini  petsc_help.py  pyproject.toml  tmp.ipynb  tutorial.ipynb
.github/workflows/: static_checks.yml  test-in-docker.yml
benchmarks/: benchmark_thm_tpsa.py
examples/: Readme.md  dev_case_2a.py  dev_cfle.py  dev_compositional.py  dev_fluid.py  dev_hm.py  dev_mech.py  dev_thm.py  dev_thm_solver_selection.py  dev_tpsa.py
src/FTHM_Solver/: __init__.py  block_matrix.py  dof_manager.py  equation_variable_groups.py  fluid_mass_balance_solver.py  full_petsc_solver.py  hm_solver.py  iterative_solver.py  mat_utils.py  momentum_balance_solver.py  options_parsers.py  petsc_solvers.py  plot_utils.py  preconditioners.py  schemes.py  solver_mixin.py  thm_solver.py
src/petsc4py-stubs/: __init__.pyi
src/pp_solvers/: __init__.py  block_linear_system.py  block_matrix.py  dof_manager.py  equation_variable_groups.py  fixed_stress.py  hm_solver.py  mat_utils.py  options_parsers.py  petsc_solvers.py  petsc_utils.py  plot_linear_system.py  plot_matrix.py  plot_utils.py  preconditioners.py  solver_mixin.py  stats.py  tmp.ipynb  transformations.py
tests/: test_block_linear_system.py  test_block_matrix.py  test_dof_manager.py  test_dof_manager_new.py  test_equation_variable_groups.py  test_fixed_stress.py  test_mat_utils.py  test_options_parsers.py  test_petsc_solvers.py  test_petsc_utils.py  test_preconditioner_performance.py  test_preconditioners.py  test_transformations.py  testing_utils.py
tests/solver_selection/: test_selector.py  tmp.py  (+2 more)
(+4 files in other folders)
