[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FTHM_Solver"
version = "0.0.1"
description = "Iterative solvers for PorePy using PETSc"
authors = [
  { name = "Yury Zabegaev", email = "Yury.Zabegaev@uib.no" },
  { name = "Eirik Keilegavlen", email = "Eirik.Keilegavlen@uib.no"}
]
# The list of dependencies is far from exhaustive, see the README for more details.
dependencies = [
  "pandas",
  "seaborn"
]
license = { text = "GPL-3" }

[project.urls]
"Homepage" = "https://github.com/pmgbergen/FTHM-Solver"

[project.optional-dependencies]
development = [
  "mypy",
  "pytest",
  "pytest-cov",
  "black",
  "flake8",
  "isort",
]


[tool.ruff]
line-length = 88

# Static analysis.
[tool.ruff.lint]
select = ["E501"]
ignore = [
    "E731",  # do not assign a lambda expression, use a def
    "E266",  # too many leading '#' for block comment
]
exclude = [
    "src/FTHM_Solver/__init__.py",
]
